--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "if-env": "^1.0.0"
   },
   "dependencies": {
+    "autodll-webpack-plugin": "^0.0.6",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "google-fonts-webpack-plugin": "^0.4.0",
     "halogen": "^0.2.0",
+    "image-webpack-loader": "^3.3.1",
     "postcss": "^6.0.3",
     "preact": "^8.1.0",
     "preact-cli": "^1.3.0",
