--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "preact build",
     "serve": "preact build && preact serve",
     "dev": "preact watch",
-    "test": "eslint src && preact test",
-    "heroku-postbuild": "yarn run build"
+    "test": "eslint src && preact test"
   },
   "keywords": [],
   "author": "",
@@ -36,7 +35,6 @@
     "react-bootstrap": "^0.31.0",
     "react-transition-group": "^1.2.0",
     "react-typist": "^1.1.1",
-    "react-waypoint": "^7.0.4",
-    "superstatic": "^4.1.0"
+    "react-waypoint": "^7.0.4"
   }
 }
