--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "font-awesome": "^4.7.0",
     "google-fonts-webpack-plugin": "^0.4.0",
     "image-webpack-loader": "^3.3.1",
+    "popmotion": "^7.2.3",
+    "popmotion-react": "^1.0.10",
     "postcss": "^6.0.3",
     "preact": "^8.1.0",
     "preact-cli": "^1.3.0",
