--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "google-fonts-webpack-plugin": "^0.4.0",
+    "halogen": "^0.2.0",
     "image-webpack-loader": "^3.3.1",
     "popmotion": "^7.2.3",
     "popmotion-react": "^1.0.10",
