--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "preact-compat": "^3.16.0",
     "preact-css-transition-group": "^1.3.0",
     "react-bootstrap": "^0.31.0",
+    "react-imageloader": "^2.1.0",
     "react-typist": "^1.1.1",
     "react-waypoint": "^7.0.4"
   }
