--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build",
-    "serve": "preact build && preact serve",
-    "dev": "preact watch",
+    "build": "preact build --template template.html",
+    "serve": "preact build --template template.html && preact serve",
+    "dev": "preact watch --template template.html",
     "test": "eslint src && preact test"
   },
   "keywords": [],
