--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "extends": "eslint-config-synacor"
   },
   "devDependencies": {
+    "compression-webpack-plugin": "^1.0.0",
     "eslint": "^4.1.1",
     "if-env": "^1.0.0"
   },
@@ -34,6 +35,7 @@
     "preact-compat": "^3.16.0",
     "preact-css-transition-group": "^1.3.0",
     "react-bootstrap": "^0.31.0",
+    "react-flop-card": "^0.1.0",
     "react-imageloader": "^2.1.0",
     "react-typist": "^1.1.1",
     "react-waypoint": "^7.0.4"
