--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "extends": "eslint-config-synacor"
   },
   "devDependencies": {
-    "compression-webpack-plugin": "git+https://github.com/ijpiantanida/compression-webpack-plugin.git#emit-event",
+    "compression-webpack-plugin": "ijpiantanida/compression-webpack-plugin#emit-event",
     "eslint": "^4.1.1",
     "if-env": "^1.0.0",
     "purify-css": "^1.2.5",
@@ -38,10 +38,9 @@
     "preact-compat": "^3.16.0",
     "preact-css-transition-group": "^1.3.0",
     "react-bootstrap": "^0.31.0",
-    "react-flop-card": "git+https://github.com/ahcarpenter/react-flop-card.git#master",
+    "react-flop-card": "ahcarpenter/react-flop-card",
     "react-imageloader": "^2.1.0",
     "react-typist": "^1.1.1",
-    "react-waypoint": "^7.0.4",
-    "simplehttp2server": "^2.0.0"
+    "react-waypoint": "^7.0.4"
   }
 }
