revise short_name, wrap ImageLoader in div

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Andrew Carpenter",
-  "short_name": "Andrew Carpenter",
+  "short_name": "ahcarpenter",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
