--- a/package.json
+++ b/package.json
@@ -21,15 +21,14 @@
     "if-env": "^1.0.0"
   },
   "dependencies": {
-    "compression-webpack-plugin": "ijpiantanida/compression-webpack-plugin.git#emit-event",
-    "purify-css": "^1.2.5",
-    "purifycss-webpack": "^0.7.0",
     "bootstrap": "^3.3.7",
+    "compression-webpack-plugin": "ijpiantanida/compression-webpack-plugin.git#emit-event",
     "font-awesome": "^4.7.0",
     "glob-all": "^3.1.0",
     "google-fonts-webpack-plugin": "^0.4.0",
     "halogen": "^0.2.0",
     "image-webpack-loader": "^3.3.1",
+    "node-sass": "^4.5.3",
     "popmotion": "^7.2.3",
     "popmotion-react": "^1.0.10",
     "postcss": "^6.0.3",
@@ -37,10 +36,13 @@
     "preact-cli": "^1.4.1",
     "preact-compat": "^3.16.0",
     "preact-css-transition-group": "^1.3.0",
+    "purify-css": "^1.2.5",
+    "purifycss-webpack": "^0.7.0",
     "react-bootstrap": "^0.31.0",
     "react-flop-card": "ahcarpenter/react-flop-card",
     "react-imageloader": "^2.1.0",
     "react-typist": "^1.1.1",
-    "react-waypoint": "^7.0.4"
+    "react-waypoint": "^7.0.4",
+    "sass-loader": "^6.0.6"
   }
 }
