--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^3.3.7",
     "compression-webpack-plugin": "ijpiantanida/compression-webpack-plugin.git#emit-event",
     "font-awesome": "^4.7.0",
+    "fontfaceobserver": "^2.0.13",
     "glob-all": "^3.1.0",
     "google-fonts-webpack-plugin": "^0.4.0",
     "halogen": "^0.2.0",
